networking/nginx/ingress-nginx/vue-static-with-gcs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: googlestoragebucket
spec:
  externalName: storage.googleapis.com
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  sessionAffinity: None
  type: ExternalName
